src/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Audio_Visual_Requirements__c</fullName>
        <label>Audio/Visual Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Room_Capacity__c</fullName>
        <label>Room Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Setup__c</fullName>
        <label>Room Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hands-on training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crescents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>